[package]
name = "third"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client.workspace = true
solana-sdk.workspace = true
serde.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
anyhow.workspace = true
futures.workspace = true

yellowstone-grpc-client = "6.1.0"
yellowstone-grpc-proto = "6.1.0"
tokio-stream = "0.1.17"
tracing = "0.1"
tracing-subscriber = "0.3"
